# sector

./: .gitignore  Architecture.md  LICENSE  MANIFEST.in  README.md  Sector_Output.md  __init__.py  comparator.py  download_models.py  extractor.py  requirements.txt  sector.py  sector_helper.py  setup.cfg  setup.py
data/: large_context_data.xlsx  rag_response_data.xlsx  summary_data.xlsx  ~$large_context_data.xlsx
evaluator/: extractor_threshold_analyzer.py  sector_benchmark.py  sector_threshold_evaluator.py
examples/: extractor_custom_metrics_standalone.py  sector_custom_standalone.py  sector_rag_standalone.py  sector_summary_standalone.py
examples/flask_app/: app.py
examples/streamlit_app/: app.py  complete_app.py
sector/: __init__.py  auto_param_search.py  comparator.py  extractor.py  sector_main.py
sector/data/: properties.json
sector/helpers/: __init__.py  external_metrics.py  sector_helper.py
sector/utils/: __init__.py  load_properties.py  logging_config.py
test/: test_comparator.py  test_extractor.py  test_sector.py  test_sector_transcript.py
tests/: __init__.py  test_comparator.py  test_extractor.py  test_sector.py  test_sector_transcript.py
