[metadata]
name = sector
version = 0.1.0
author = Srivatsan Srinivasan
author_email = secret@later.com
description = A Python library for semantic extraction and comparison
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/srivatsan88/sector/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.package_data]
* = *.md

[options.extras_require]
testing =
    pytest
    pytest-cov
